// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-image prop 1`] = `
<div class="ca2-coupon-list">
  <div class="ca2-coupon-list__exchange-bar">
    <div class="ca2-cell ca2-cell--borderless ca2-field ca2-coupon-list__field">
      <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
        <div class="ca2-field__body"><input type="text" placeholder="请输入优惠码" class="ca2-field__control"></div>
      </div>
    </div><button disabled="disabled" class="ca2-button ca2-button--danger ca2-button--normal ca2-button--plain ca2-button--disabled ca2-coupon-list__exchange"><span class="ca2-button__text">兑换</span></button>
  </div>
  <div class="ca2-tabs ca2-tabs--line ca2-coupon-list__tab">
    <div class="ca2-tabs__wrap">
      <div role="tablist" class="ca2-tabs__nav ca2-tabs__nav--line">
        <div role="tab" aria-selected="true" class="ca2-tab ca2-tab--active ca2-ellipsis"><span class="ca2-tab__text">可用 (0)<!----></span></div>
        <div role="tab" class="ca2-tab ca2-ellipsis"><span class="ca2-tab__text">不可用 (0)<!----></span></div>
        <div class="ca2-tabs__line"></div>
      </div>
    </div>
    <div class="ca2-tabs__content">
      <div role="tabpanel" class="ca2-tab__pane">
        <div class="ca2-coupon-list__list ca2-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="ca2-coupon-list__empty"><img src="https://img.yzcdn.com/xxx.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="ca2-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="ca2-coupon-list__bottom"><button class="ca2-button ca2-button--danger ca2-button--normal ca2-button--block ca2-button--round ca2-coupon-list__close"><span class="ca2-button__text">不使用优惠券</span></button></div>
</div>
`;

exports[`render coupon cell 1`] = `
<div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-coupon-cell">
  <div class="ca2-cell__title"><span>优惠券</span></div>
  <div class="ca2-cell__value"><span>暂无可用</span></div><i class="ca2-icon ca2-icon-arrow ca2-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon cell with coupon 1`] = `
<div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-coupon-cell">
  <div class="ca2-cell__title"><span>优惠券</span></div>
  <div class="ca2-cell__value ca2-coupon-cell--selected"><span>-¥1.00</span></div><i class="ca2-icon ca2-icon-arrow ca2-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon list 1`] = `
<div class="ca2-coupon-list">
  <div class="ca2-coupon-list__exchange-bar">
    <div class="ca2-cell ca2-cell--borderless ca2-field ca2-coupon-list__field">
      <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
        <div class="ca2-field__body"><input type="text" placeholder="请输入优惠码" class="ca2-field__control"></div>
      </div>
    </div><button disabled="disabled" class="ca2-button ca2-button--danger ca2-button--normal ca2-button--plain ca2-button--disabled ca2-coupon-list__exchange"><span class="ca2-button__text">兑换</span></button>
  </div>
  <div class="ca2-tabs ca2-tabs--line ca2-coupon-list__tab">
    <div class="ca2-tabs__wrap">
      <div role="tablist" class="ca2-tabs__nav ca2-tabs__nav--line">
        <div role="tab" aria-selected="true" class="ca2-tab ca2-tab--active ca2-ellipsis"><span class="ca2-tab__text">可用 (6)<!----></span></div>
        <div role="tab" class="ca2-tab ca2-ellipsis"><span class="ca2-tab__text">不可用 (2)<!----></span></div>
        <div class="ca2-tabs__line"></div>
      </div>
    </div>
    <div class="ca2-tabs__content">
      <div role="tabpanel" class="ca2-tab__pane">
        <div class="ca2-coupon-list__list ca2-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="ca2-coupon">
            <div class="ca2-coupon__content">
              <div class="ca2-coupon__head">
                <h2 class="ca2-coupon__amount"></h2>
                <p class="ca2-coupon__condition">无使用门槛</p>
              </div>
              <div class="ca2-coupon__body">
                <p class="ca2-coupon__name"></p>
                <p class="ca2-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="ca2-checkbox ca2-coupon__corner" size="18">
                  <div class="ca2-checkbox__icon ca2-checkbox__icon--round"><i class="ca2-icon ca2-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="ca2-coupon">
            <div class="ca2-coupon__content">
              <div class="ca2-coupon__head">
                <h2 class="ca2-coupon__amount"><span>¥</span> 1.5</h2>
                <p class="ca2-coupon__condition">无使用门槛</p>
              </div>
              <div class="ca2-coupon__body">
                <p class="ca2-coupon__name">name</p>
                <p class="ca2-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="true" class="ca2-checkbox ca2-coupon__corner" size="18">
                  <div class="ca2-checkbox__icon ca2-checkbox__icon--round ca2-checkbox__icon--checked"><i class="ca2-icon ca2-icon-success" style="border-color: #ee0a24; background-color: rgb(238, 10, 36);">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="ca2-coupon__description">description</p>
          </div>
          <div class="ca2-coupon">
            <div class="ca2-coupon__content">
              <div class="ca2-coupon__head">
                <h2 class="ca2-coupon__amount"><span>¥</span> 1</h2>
                <p class="ca2-coupon__condition">无使用门槛</p>
              </div>
              <div class="ca2-coupon__body">
                <p class="ca2-coupon__name">name</p>
                <p class="ca2-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="ca2-checkbox ca2-coupon__corner" size="18">
                  <div class="ca2-checkbox__icon ca2-checkbox__icon--round"><i class="ca2-icon ca2-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="ca2-coupon__description">description</p>
          </div>
          <div class="ca2-coupon">
            <div class="ca2-coupon__content">
              <div class="ca2-coupon__head">
                <h2 class="ca2-coupon__amount"><span>¥</span> 1.23</h2>
                <p class="ca2-coupon__condition">无使用门槛</p>
              </div>
              <div class="ca2-coupon__body">
                <p class="ca2-coupon__name">name</p>
                <p class="ca2-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="ca2-checkbox ca2-coupon__corner" size="18">
                  <div class="ca2-checkbox__icon ca2-checkbox__icon--round"><i class="ca2-icon ca2-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="ca2-coupon__description">description</p>
          </div>
          <div class="ca2-coupon">
            <div class="ca2-coupon__content">
              <div class="ca2-coupon__head">
                <h2 class="ca2-coupon__amount">8.8折</h2>
                <p class="ca2-coupon__condition">满0.5元可用</p>
              </div>
              <div class="ca2-coupon__body">
                <p class="ca2-coupon__name">name</p>
                <p class="ca2-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="ca2-checkbox ca2-coupon__corner" size="18">
                  <div class="ca2-checkbox__icon ca2-checkbox__icon--round"><i class="ca2-icon ca2-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="ca2-coupon">
            <div class="ca2-coupon__content">
              <div class="ca2-coupon__head">
                <h2 class="ca2-coupon__amount">9折</h2>
                <p class="ca2-coupon__condition">满0.5元可用</p>
              </div>
              <div class="ca2-coupon__body">
                <p class="ca2-coupon__name">name</p>
                <p class="ca2-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="ca2-checkbox ca2-coupon__corner" size="18">
                  <div class="ca2-checkbox__icon ca2-checkbox__icon--round"><i class="ca2-icon ca2-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="ca2-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="ca2-coupon-list__bottom"><button class="ca2-button ca2-button--danger ca2-button--normal ca2-button--block ca2-button--round ca2-coupon-list__close"><span class="ca2-button__text">不使用优惠券</span></button></div>
</div>
`;

exports[`render disabled coupon 1`] = `
<div class="ca2-coupon ca2-coupon--disabled">
  <div class="ca2-coupon__content">
    <div class="ca2-coupon__head">
      <h2 class="ca2-coupon__amount"><span>¥</span> 1.5</h2>
      <p class="ca2-coupon__condition">无使用门槛</p>
    </div>
    <div class="ca2-coupon__body">
      <p class="ca2-coupon__name">name</p>
      <p class="ca2-coupon__valid">2017.03.10 - 2017.12.30</p>
    </div>
  </div>
  <p class="ca2-coupon__description">reason</p>
</div>
`;

exports[`render empty coupon list 1`] = `
<div class="ca2-coupon-list">
  <div class="ca2-coupon-list__exchange-bar">
    <div class="ca2-cell ca2-cell--borderless ca2-field ca2-coupon-list__field">
      <div class="ca2-cell__value ca2-cell__value--alone ca2-field__value">
        <div class="ca2-field__body"><input type="text" placeholder="请输入优惠码" class="ca2-field__control"></div>
      </div>
    </div><button disabled="disabled" class="ca2-button ca2-button--danger ca2-button--normal ca2-button--plain ca2-button--disabled ca2-coupon-list__exchange"><span class="ca2-button__text">兑换</span></button>
  </div>
  <div class="ca2-tabs ca2-tabs--line ca2-coupon-list__tab">
    <div class="ca2-tabs__wrap">
      <div role="tablist" class="ca2-tabs__nav ca2-tabs__nav--line">
        <div role="tab" class="ca2-tab ca2-ellipsis"><span class="ca2-tab__text">可用 (0)<!----></span></div>
        <div role="tab" class="ca2-tab ca2-tab--active ca2-ellipsis" aria-selected="true"><span class="ca2-tab__text">不可用 (0)<!----></span></div>
        <div class="ca2-tabs__line"></div>
      </div>
    </div>
    <div class="ca2-tabs__content">
      <div role="tabpanel" class="ca2-tab__pane" style="display: none;">
        <div class="ca2-coupon-list__list ca2-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="ca2-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="ca2-tab__pane" style="">
        <div class="ca2-coupon-list__list ca2-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="ca2-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="ca2-coupon-list__bottom"><button class="ca2-button ca2-button--danger ca2-button--normal ca2-button--block ca2-button--round ca2-coupon-list__close"><span class="ca2-button__text">不使用优惠券</span></button></div>
</div>
`;
